# qt5-freq-viewer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_simple.sh  create_deb.sh  qt5-freq-viewer.qrc
misc/: LINUXDEPLOY.md  generate_test3_random.py  worktime.txt
qml/: main.qml  qt5freqviewer.qml
src/: datareader.cpp  datareader.h  main.cpp  mytextcontroller.cpp  mytextcontroller.h  qt5-freq-viewer.qrc  qt5freqviewer.cpp  qt5freqviewer.h
src/controllers/: all_controllers.cpp  all_controllers.h  canvascontroller.cpp  canvascontroller.h  menucontroller.cpp  menucontroller.h  mytextcontroller.cpp
src/fonts/: CruNattapong-XyOd-info.txt
src/qml/: main.qml
src/utils/: timeprofiler.cpp  timeprofiler.h
testdata/: test1.txt  test1_wrongformat1.txt  test1_wrongformat2.txt  test2.txt  test3_random.txt
ui/: qt5freqviewer.ui
